details page: fix contrast in license badge if license is unknown
Change the text color of the 'unknown' license badge from white
to black. This gives better contrast against the badge background
color and makes it easier to read the text.

Fixes issue #351

--- a/src/gtk-style.css
+++ b/src/gtk-style.css
@@ -75,13 +75,15 @@
 .details-license-free:hover label,
 .details-license-nonfree label,
 .details-license-nonfree:backdrop label,
-.details-license-nonfree:hover label,
-.details-license-unknown label,
-.details-license-unknown:backdrop label,
-.details-license-unknown:hover label {
+.details-license-nonfree:hover label {
 	color: #fff;
 }
 
+.details-license-unknown label,
+.details-license-unknown:backdrop label,
+.details-license-unknown:hover label {
+	color: #373d3f;
+}
 .content-rating {
 	outline-offset: 0;
 	background-image: none;
